--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,11 +12,12 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.0.4",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "nodemailer": "^6.9.8"
   }
 }
