--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.0.4",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8"
   }
 }
